Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-18728

Windows Phone deployment is broken in Qt Creator

    XMLWordPrintable

Details

    • 5e6ff555ab5a49650307b9fe2f9547892945935d

    Description

      When I try to run a UWP application on my Lumia 950 running Windows 10 Mobile, Qt Creator tries to deploy to the local (desktop) device anyways.

      It seems like it fails to pass --profile appxphone to winrtrunner.exe when deploying the application.

      Presumably this also affects development for Windows 10 IoT i.e. on Raspberry Pi.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jakepetroules Jake Petroules (DO NOT ASSIGN ISSUES)
            jakepetroules Jake Petroules (DO NOT ASSIGN ISSUES)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes