Fix deployment to Windows 10 Mobile devices

Task-number: QTCREATORBUG-18728
Change-Id: Ib04ca8a0a163611bbb53bc50f2e0009ab460ce35
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>
Reviewed-by: Maurice Kalinowski <maurice.kalinowski@qt.io>